# CSC-7644_Fine-Tuning-LLMs-for-Bug-Detection-in-Quantum-Software

./: .env.example  .gitignore  LICENSE  README.md  bug_patterns_labeled.json  config.example.yaml  main.py  pyproject.toml  requirements.txt
data/: README.md  bug_patterns_categorized.json  bug_patterns_classical.json  bug_patterns_quantum.json  sample_data.json
docs/: README.md  architecture.md  final_report.tex  methodology.md  project_summary.md  results.md
figures/: README.md
notebooks/: README.md  quantum-vs-classical-bug-detection-Final.ipynb  quantum-vs-classical-bug-prediction-v1.ipynb  quantum-vs-classical-bug-prediction-v11.ipynb
results/: README.md  final_summary.json  predictions_codebert.csv  predictions_graphcodebert.csv  predictions_roberta.csv
scripts/: README.md  __init__.py  generate_figures.py  generate_sample_artifacts.py  generate_sample_outputs.py  run_evaluation.py  run_experiment.sh  run_study_i_codebert.py  run_training.py
src/: README.md  __init__.py  callbacks.py  config.py  data_loader.py  data_utils.py  evaluate.py  evaluation.py  model_utils.py  plots.py  plotting.py  train_utils.py  training.py
src/study_i/: __init__.py  analysis.py  callbacks.py  dataset.py  plotting.py  schemas.py  training.py
tables/: README.md  cross_model_comparison.csv  cross_model_results.json  fold_metrics.csv  model_comparison.csv  per_fold_codebert.csv  per_fold_graphcodebert.csv  per_fold_roberta.csv  results_codebert.json  results_graphcodebert.json  results_roberta.json  statistical_tests.csv  summary_metrics.csv
tests/: README.md  __init__.py  test_callbacks.py  test_config.py  test_data_loader.py  test_data_utils.py  test_dataset.py  test_evaluate.py  test_schemas.py
