[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "csc7644-bug-classifier"
version = "0.1.0"
description = "Three-backbone fine-tuning comparison for classical vs. quantum bug-report classification (CSC 7644 final project)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Md Saidur Rahman", email = "saidur@eub.edu.bd" },
]
keywords = [
    "llm",
    "fine-tuning",
    "quantum-software",
    "bug-detection",
    "transformers",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "transformers==4.44.2",
    "datasets==2.21.0",
    "accelerate==0.34.2",
    "scikit-learn==1.5.2",
    "numpy>=1.24,<3",
    "pandas>=2.0,<3",
    "scipy>=1.11",
    "matplotlib>=3.7,<4",
    "seaborn>=0.12,<1",
    "torch>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/saidurlsu/csc7644-final-project"

[project.scripts]
csc7644-train = "main:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["tests*", "scripts*", "notebooks*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["notebooks", ".venv", "results"]
