[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "study-i-quantum-bug-classifier"
version = "0.1.0"
description = "Classical vs. quantum bug classification (CSC 7644 final project)."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Md. Saidur Rahman", email = "saidur@eub.edu.bd" }]
keywords = ["quantum", "bug-detection", "llm", "fine-tuning", "roberta", "codebert"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: OS Independent",
]
dependencies = [
    "transformers==4.44.2",
    "datasets==2.21.0",
    "accelerate==0.34.2",
    "scikit-learn==1.5.2",
    "numpy>=1.24,<3",
    "pandas>=2.0,<3",
    "scipy>=1.11",
    "matplotlib>=3.7,<4",
    "seaborn>=0.12,<1",
    "torch>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
]

[project.scripts]
run-study-i = "scripts.run_study_i_codebert:main"
generate-sample-outputs = "scripts.generate_sample_outputs:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
